# AuctionAlgoritm

./: CMakeLists.txt  README.md
ClassicAuction/: CMakeLists.txt  classic_auct_max.cpp  classic_auct_min.cpp  test.cpp  test.txt
ClassicAuction/AuctionCore/: auction_core.cpp  auction_core.h
Docs/: auct_alg.drawio
